# Aleo-101-Bootcamp

./: README.md  Shield_Wallet_guide.md  Template.md  checktask.py  stats_learn_tasks.py
.github/workflows/: deploy-docs.yml
docs/: next.config.js  package-lock.json  package.json  theme.config.jsx
docs/pages/: _meta.json  faqs.mdx  how-to-get-help.mdx  index.tsx
docs_v2/: theme.config.jsx
docs_v2/pages/: index.tsx
learn/01luyicheng/: 01luyicheng.md
learn/0xE1337/: 0xE1337.md  task1.md  task2.md
learn/0xSen10/: 0xSen10.md  task1.md  task2.md
learn/2090988808/: 2090988808.md  task1.md
learn/AleoTimes/: AleoTimes.md  task1.md  task2.md
learn/Aria/: Aria.md  task1.md
learn/Asher-Tan/: Asher-Tan.md  task1.md
learn/BareerahBenjamin/: BareerahBenjamin.md  task1.md  task2.md
learn/Cao150702/: Cao150702.md
learn/Chichuzxy/: Chichuzxy.md  Task 1  Task 2
learn/DuskoLL/: DuskoLL.md  task1.md
learn/Gray-c-c/: Gray-c-c.md  task1.md
learn/HirongVSuen/: HirongVSuen.md  task1.md  task3.md  task4.md
learn/JackCC703/: JackCC703.md  task2.md
learn/JasonRUAN/: JasonRUAN.md  task1.md
learn/Jiningsi/: Jiningsi.md  task1.md
learn/Kiiro/: Kiiro.md
learn/Kiruno-lz/: Kiruno-lz.md  task1.md
learn/Kunram/: Kunram.md  task1.md
learn/Lazybones3/: Lazybones3.md  task1.md
learn/Liuzhichao99/: Template.md
learn/qiaopengjun5162/task/aleo-private-vote/client-rust/: Cargo.toml
learn/qiaopengjun5162/task/aleo-private-vote/client-rust/src/: core.rs  main.rs  network.rs  query.rs
reward/: task1_bounty.xlsx
task/: task1.md  task2.md  task3.md  task4.md
(+589 files in other folders)
