[package]
name = "aleo-private-vote-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.3", features = ["json"] }
snarkvm = { git = "https://github.com/ProvableHQ/snarkVM.git", branch = "testnet", features = [
    "synthesizer",
    "ledger",
] }
tokio = { version = "1.52.3", features = ["full"] }
